refactor: use toolkit from own math library